; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_jsstr.c_jsstr_free.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_jsstr.c_jsstr_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jsstr_free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @jsstr_tag(i32* %4)
  switch i32 %5, label %24 [
    i32 130, label %6
    i32 128, label %12
    i32 129, label %23
  ]

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call %struct.TYPE_5__* @jsstr_as_heap(i32* %7)
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @heap_free(i32* %10)
  br label %24

12:                                               ; preds = %1
  %13 = load i32*, i32** %2, align 8
  %14 = call %struct.TYPE_4__* @jsstr_as_rope(i32* %13)
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %3, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @jsstr_release(i32 %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @jsstr_release(i32 %21)
  br label %24

23:                                               ; preds = %1
  br label %24

24:                                               ; preds = %1, %23, %12, %6
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @heap_free(i32* %25)
  ret void
}

declare dso_local i32 @jsstr_tag(i32*) #1

declare dso_local i32 @heap_free(i32*) #1

declare dso_local %struct.TYPE_5__* @jsstr_as_heap(i32*) #1

declare dso_local %struct.TYPE_4__* @jsstr_as_rope(i32*) #1

declare dso_local i32 @jsstr_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
